--- a/index.html
+++ b/index.html
@@ -3,72 +3,20 @@
 
 <head>
     <base href="/" />
-    <!-- Global variable definition -->
     <script type="text/javascript">const global = globalThis</script>
-
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Krishna Gera Site</title>
+    <!-- Set the title of the site -->
+    <title>Krishna Gera's Site</title>
 
-    <!-- External Stylesheets -->
-    <link href="/assets/css/react-image-crop.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
-    <link rel="stylesheet" href="/assets/css/reset.css" />
-    <link rel="stylesheet" href="/assets/css/reqStyles.css" />
-
-    <!-- Font Definitions -->
-    <style type="text/css">
-        /* Nunito Sans Font */
-        @font-face {
-            font-family: Nunito Sans;
-            font-style: normal;
-            font-weight: 300;
-            src: url(/cf-fonts/v/nunito-sans/5.0.11/latin-ext/wght/normal.woff2);
-            unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB,
-                U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-            font-display: swap;
-        }
-
-        /* Mulish Font */
-        @font-face {
-            font-family: Mulish;
-            font-style: normal;
-            font-weight: 600;
-            src: url(/cf-fonts/v/mulish/5.0.13/cyrillic-ext/wght/normal.woff2);
-            unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
-            font-display: swap;
-        }
-    </style>
+    <!-- Add a favicon (replace 'favicon.ico' with the path to your favicon image) -->
+    <link rel="icon" type="image/x-icon" href="/path/to/favicon.ico" />
 </head>
 
 <body style="overflow-x:hidden">
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-52XMXNW" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe>
-    </noscript>
-
-    <!-- Facebook Pixel Code -->
-    <noscript>
-        <img height="1" width="1" style="display:none"
-            src="https://www.facebook.com/tr?id=1547901969043268&ev=PageView&noscript=1" />
-    </noscript>
-
-    <!-- Main Content -->
-    <div id="root" style="height:100%"></div>
-
-    <!-- Intercom Settings -->
-    <script type="text/javascript">window.intercomSettings = { app_id: "mi73h8ob" }</script>
-
-    <!-- Third-party Scripts -->
-    <script src="./iframeResiiframeSizer.contentWindow.min.js" type="text/javascript"></script>
-    <script src="/static/js/vendors~main.chunk.js" type="text/javascript"></script>
-    <script src="/static/js/main.js" type="text/javascript"></script>
-
-    <!-- Cloudflare Rocket Loader -->
-    <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js"
-        data-cf-settings="207a3278b8e99a0118cf8ed9-|49" defer></script>
+    <!-- Embedding the website using an iframe -->
+    <iframe src="https://krishnagera.codedesign.app/" width="100%" height="100%" frameborder="0"></iframe>
 </body>
 
 </html>
