--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Krishna Gera's Site</title>
 
     <!-- Add a favicon (replace 'favicon.ico' with the path to your favicon image) -->
-    <link rel="icon" type="image/x-icon" href="/path/to/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/KGlogo.jpg" />
 </head>
 
 <body style="overflow-x:hidden">
