--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body style="overflow-x:hidden">
     <!-- Embedding the website using an iframe -->
-    <iframe src="https://krishnagera.codedesign.app/" height="100%" frameborder="0"></iframe>
+    <iframe src="https://krishnagera.codedesign.app/" width="1000%" height="100%" frameborder="0"></iframe>
 </body>
 
 </html>
