--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body style="overflow-x:hidden">
     <!-- Embedding the website using an iframe -->
-    <iframe src="https://krishnagera.codedesign.app/" width="100%" frameborder="0"></iframe>
+    <iframe src="https://krishnagera.codedesign.app/" width="100%"  frameborder="0" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; border: none;"></iframe>
 </body>
 
 </html>
