--- a/index.html
+++ b/index.html
@@ -12,11 +12,38 @@
 
     <!-- Add a favicon (replace 'favicon.ico' with the path to your favicon image) -->
     <link rel="icon" type="image/x-icon" href="/KGlogo.jpg" />
+    <style type="text/css">
+        body {
+            overflow: hidden; /* Hide the side scrollbar */
+        }
+
+        /* Custom scrollbar styling */
+        ::webkit-scrollbar {
+            width: 12px;
+        }
+
+        ::webkit-scrollbar-thumb {
+            background-color: #808080; /* Grey color for the scrollbar thumb */
+            border-radius: 6px;
+        }
+
+        ::webkit-scrollbar-track {
+            background-color: #f1f1f1; /* Light grey color for the scrollbar track */
+            border-radius: 6px;
+        }
+    </style>
 </head>
 
 <body style="overflow-x:hidden">
     <!-- Embedding the website using an iframe -->
     <iframe src="https://krishnagera.codedesign.app/" width="100%" height="100%" frameborder="0" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; border: none;"></iframe>
+    <script type="text/javascript">
+        document.addEventListener('contextmenu', function (e) {
+            e.preventDefault();
+            alert('Right-clicking is disabled for this website.');
+        });
+    </script>
+    
 </body>
 
 </html>
