--- a/index.html
+++ b/index.html
@@ -17,18 +17,17 @@
             overflow: hidden; /* Hide the side scrollbar */
         }
     </style>
+    <!-- Disable right-clicking -->
+    <script type="text/javascript">
+        document.addEventListener('contextmenu', function (e) {
+            e.preventDefault();
+        });
+    </script>
 </head>
 
 <body style="overflow-x:hidden">
     <!-- Embedding the website using an iframe -->
-    <iframe src="https://krishnagera.codedesign.app/" width="100%" height="100%" frameborder="0" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; border: none;"></iframe>
-    <script type="text/javascript">
-        document.addEventListener('contextmenu', function (e) {
-            e.preventDefault();
-            alert('Right-clicking is disabled for this website.');
-        });
-    </script>
-    
+    <iframe src="https://krishnagera.codedesign.app/" width="100%" height="100%" frameborder="0" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; border: none;"></iframe>   
 </body>
 
 </html>
