--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <!-- Laptop Animation -->
         <div class="laptop">
           <!-- Your Laptop SVG or Image Goes Here -->
+            <img src="/laptop-12610.svg" alt="Laptop SVG">
             <div class="screen">
             </div>
             <div class="keyboard">
