--- a/friends/Anushika.html
+++ b/friends/Anushika.html
@@ -1,1 +1,69 @@
-Hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>My Friend Anushika</title>
+<link rel="icon" href="images/anushika/image4.jpg" type="image/jpg">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Protest+Riot&family=Protest+Strike&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div><div class="circle"></div>
+    <div class="wrapper">
+        <div><span class="dot"></span></div><div><span class="dot"></span></div><div><span class="dot"></span></div><div><span class="dot"></span></div><div><span class="dot"></span></div><div><span class="dot"></span></div><div><span class="dot"></span></div><div><span class="dot"></span></div><div><span class="dot"></span></div><div><span class="dot"></span></div><div><span class="dot"></span></div><div><span class="dot"></span></div><div><span class="dot"></span></div><div><span class="dot"></span></div><div><span class="dot"></span></div>
+      </div>
+<div id="content">
+    <h1>Welcome to Our Bond Showcase</h1>
+    <p>Here, it's all about us, our bond.</p>
+    <p>I've gathered some reels just to dedicate you and our bond.</p>
+    <div class="wrap">
+        <a href="https://www.instagram.com/reel/C2B54ikpCg3/?igsh=Y2V1eWo3dGQzeTBu" target="_blank">
+            <button class="button">Reel 1</button>
+        </a>
+    </div>
+    <div class="wrap">
+        <a href="https://www.instagram.com/reel/C2kENyzCshh/?igsh=MXhiNHdvNHloNG4xeA==" target="_blank">
+            <button class="button">Reel 2</button>
+        </a>
+    </div>
+    <div class="wrap">
+        <a href="" target="_blank">
+            <button class="button">Reel 3</button>
+        </a>
+    </div>
+    <p>"I've also gathered some of our favorite moments, and this little treasure trove of memories is just for you. It will soon be updated with more of our cherished times together soon."</p>
+    <div class="memories">
+        <div class="slider-wrapper">
+            <button id="prev-slide" class="slide-button material-symbols-rounded">
+              &lt;
+            </button>
+            <ul class="image-list">
+              <li><img class="image-item" src="images/anushika/image1.jpg" alt="img-1" /></li>
+              <li><img class="image-item" src="images/anushika/image2.jpg" alt="img-2" /></li>
+              <li><img class="image-item" src="images/anushika/image1.jpg" alt="img-3" /></li>
+              <li><img class="image-item" src="images/anushika/image2.jpg" alt="img-4" /></li>
+              <li><img class="image-item" src="images/anushika/image1.jpg" alt="img-5" /></li>
+              <li><img class="image-item" src="images/anushika/image3.jpg" alt="img-6" /></li>
+              <li><img class="image-item" src="images/anushika/image2.jpg" alt="img-7" /></li>
+              <li><img class="image-item" src="images/anushika/image3.jpg" alt="img-8" /></li>
+              <li><img class="image-item" src="images/anushika/image3.jpg" alt="img-9" /></li>
+              <li><img class="image-item" src="images/anushika/image3.jpg" alt="img-10" /></li>
+            </ul>
+            <button id="next-slide" class="slide-button material-symbols-rounded">
+              &gt;
+            </button>
+        </div>
+        <p class="scroll-text">scroll left or right to view all images</p>
+        <div class="slider-scrollbar">
+            <div class="scrollbar-track">
+              <div class="scrollbar-thumb"></div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="script.js"></script>
+</body>
+</html>
