--- a/friends/Divija.html
+++ b/friends/Divija.html
@@ -20,7 +20,7 @@
     <p>Here, it's all about us, our bond.</p>
     <p>I've gathered some reels just to dedicate you and our bond.</p>
     <div class="wrap">
-        <a href="https://www.instagram.com/reel/C2B54ikpCg3/?igsh=Y2V1eWo3dGQzeTBu" target="_blank">
+        <a href="https://www.instagram.com/reel/C0KSI1DS7y7/?igsh=MTBscGppdms5c3Fraw==" target="_blank">
             <button class="button">Reel 1</button>
         </a>
     </div>
