--- a/friends/Divija.html
+++ b/friends/Divija.html
@@ -17,6 +17,7 @@
       </div>
 <div id="content">
     <h1>Welcome to Our Bond Showcase</h1>
+    <h2>Divija</h2>
     <p>Here, it's all about us, our bond.</p>
     <p>I've gathered some reels just to dedicate you and our bond.</p>
     <div class="wrap">
