--- a/friends/Divija.html
+++ b/friends/Divija.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Friend Divija</title>
-<link rel="icon" href="images/anushika/image4.jpg" type="image/jpg">
+<title>My Friend divija</title>
+<link rel="icon" href="images/divija/tab-logo.png" type="image/png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&family=Protest+Strike&display=swap" rel="stylesheet">
@@ -26,32 +26,42 @@
         </a>
     </div>
     <div class="wrap">
-        <a href="https://www.instagram.com/reel/C2kENyzCshh/?igsh=MXhiNHdvNHloNG4xeA==" target="_blank">
+        <a href="https://www.instagram.com/reel/C0jVBVZPQn8/?igsh=Z3lzOTl1bnhnZHQx" target="_blank">
             <button class="button">Reel 2</button>
         </a>
     </div>
     <div class="wrap">
-        <a href="" target="_blank">
+        <a href="https://www.instagram.com/reel/C0lXA2VIqxK/?igsh=ODAwdzM4ajdzMXh4" target="_blank">
             <button class="button">Reel 3</button>
         </a>
     </div>
-    <p>"I've also gathered some of our favorite moments, and this little treasure trove of memories is just for you. It will soon be updated with more of our cherished times together soon."</p>
+    <p>"I've also gathered some of our favorite moments, and this little treasure trove of memories is just for you."</p>
     <div class="memories">
         <div class="slider-wrapper">
             <button id="prev-slide" class="slide-button material-symbols-rounded">
               &lt;
             </button>
             <ul class="image-list">
-              <li><img class="image-item" src="images/anushika/image1.jpg" alt="img-1" /></li>
-              <li><img class="image-item" src="images/anushika/image2.jpg" alt="img-2" /></li>
-              <li><img class="image-item" src="images/anushika/image1.jpg" alt="img-3" /></li>
-              <li><img class="image-item" src="images/anushika/image2.jpg" alt="img-4" /></li>
-              <li><img class="image-item" src="images/anushika/image1.jpg" alt="img-5" /></li>
-              <li><img class="image-item" src="images/anushika/image3.jpg" alt="img-6" /></li>
-              <li><img class="image-item" src="images/anushika/image2.jpg" alt="img-7" /></li>
-              <li><img class="image-item" src="images/anushika/image3.jpg" alt="img-8" /></li>
-              <li><img class="image-item" src="images/anushika/image3.jpg" alt="img-9" /></li>
-              <li><img class="image-item" src="images/anushika/image3.jpg" alt="img-10" /></li>
+                <li><img class="image-item" src="images\divija\photo_1_2024-02-11_14-05-37.jpg" alt="img-1" /></li>
+                <li><img class="image-item" src="images\divija\photo_2_2024-02-11_14-05-37.jpg" alt="img-2" /></li>
+                <li><img class="image-item" src="images\divija\photo_3_2024-02-11_14-05-37.jpg" alt="img-3" /></li>
+                <li><img class="image-item" src="images\divija\photo_4_2024-02-11_14-05-37.jpg" alt="img-4" /></li>
+                <li><img class="image-item" src="images\divija\photo_5_2024-02-11_14-05-37.jpg" alt="img-5" /></li>
+                <li><img class="image-item" src="images\divija\photo_6_2024-02-11_14-05-37.jpg" alt="img-6" /></li>
+                <li><img class="image-item" src="images\divija\photo_7_2024-02-11_14-05-37.jpg" alt="img-7" /></li>
+                <li><img class="image-item" src="images\divija\photo_8_2024-02-11_14-05-37.jpg" alt="img-8" /></li>
+                <li><img class="image-item" src="images\divija\photo_9_2024-02-11_14-05-37.jpg" alt="img-9" /></li>
+                <li><img class="image-item" src="images\divija\photo_10_2024-02-11_14-05-37.jpg" alt="img-10" /></li>
+                <li><img class="image-item" src="images\divija\photo_11_2024-02-11_14-05-37.jpg" alt="img-11" /></li>
+                <li><img class="image-item" src="images\divija\photo_12_2024-02-11_14-05-37.jpg" alt="img-12" /></li>
+                <li><img class="image-item" src="images\divija\photo_13_2024-02-11_14-05-37.jpg" alt="img-13" /></li>
+                <li><img class="image-item" src="images\divija\photo_15_2024-02-11_14-05-37.jpg" alt="img-15" /></li>
+                <li><img class="image-item" src="images\divija\photo_16_2024-02-11_14-05-37.jpg" alt="img-16" /></li>
+                <li><img class="image-item" src="images\divija\photo_17_2024-02-11_14-05-37.jpg" alt="img-17" /></li>
+                <li><img class="image-item" src="images\divija\photo_18_2024-02-11_14-05-37.jpg" alt="img-18" /></li>
+                <li><img class="image-item" src="images\divija\photo_20_2024-02-11_14-05-37.jpg" alt="img-20" /></li>
+                <li><img class="image-item" src="images\divija\photo_21_2024-02-11_14-05-37.jpg" alt="img-21" /></li>
+                <li><img class="image-item" src="images\divija\photo_22_2024-02-11_14-05-37.jpg" alt="img-22" /></li>
             </ul>
             <button id="next-slide" class="slide-button material-symbols-rounded">
               &gt;
