--- a/friends/Divija.html
+++ b/friends/Divija.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Friend divija</title>
+<title>My Friend Divija</title>
 <link rel="icon" href="images/divija/tab-logo.png" type="image/png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
