--- a/friends/Anushika.html
+++ b/friends/Anushika.html
@@ -10,16 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&family=Protest+Strike&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 <style>
-    .slider-wrapper .image-list {
-    display: grid;
-    grid-template-columns: repeat(9, 1fr);
-    gap: 18px;
-    font-size: 0;
-    list-style: none;
-    margin-bottom: 30px;
-    overflow-x: auto;
-    scrollbar-width: none;
-}
+    .slider-wrapper .image-list { grid-template-columns: repeat(9, 1fr);}
 </style>
 </head>
 <body>
