--- a/talentedtots.html
+++ b/talentedtots.html
@@ -1,1 +1,78 @@
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F9bIqSzBfiGUjVLGlhLSEWS%2FTalented-Tods-Website%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddev" allowfullscreen></iframe>
+<div className="LandingPage" style={{width: 1920, height: 3560, position: 'relative', background: 'white'}}>
+  <div className="Rectangle7" style={{width: 1920, height: 703, left: 0, top: 2857, position: 'absolute', background: '#FF1F8B'}} />
+  <div className="AddmissionOpen" style={{width: 1920, height: 130, left: 0, top: 2730, position: 'absolute'}}>
+    <div className="Base" style={{width: 1920, height: 130, left: 0, top: 0, position: 'absolute', background: 'linear-gradient(90deg, #8436BB 0%, #7A31AA 59%, #672887 98%, #542066 100%)'}} />
+    <div className="AdmissionsOpen" style={{left: 384, top: 26, position: 'absolute', color: 'white', fontSize: 64, fontFamily: 'Itim', fontWeight: '400', wordWrap: 'break-word'}}>Admissions Open  </div>
+    <div className="Button" style={{width: 500, height: 80, left: 1006, top: 26, position: 'absolute', boxShadow: '5px 5px 4px rgba(0, 0, 0, 0.25)'}}></div>
+  </div>
+  <div className="SchoolTour" style={{width: 1920, height: 650, left: 0, top: 2080, position: 'absolute'}}>
+    <div className="Base" style={{width: 1920, height: 650, left: 0, top: 0, position: 'absolute', background: '#FF1E1E'}} />
+    <div className="Youtube" style={{width: 995.56, height: 560, left: 857, top: 49, position: 'absolute'}}></div>
+    <div className="EmbarkOnThisJourneyWithCuriosityAndAnOpenHeartExploreNewHorizonsLearnAndGrowTogetherWeCreateMemoriesThatLastALifetimeOurSharedExperiencesBindUsAsACommunity" style={{width: 731, height: 323, left: 78, top: 200, position: 'absolute', color: 'white', fontSize: 48, fontFamily: 'Jolly Lodger', fontWeight: '400', wordWrap: 'break-word'}}>Embark on this journey with curiosity and an open heart. Explore new horizons, learn, and grow.<br/>Together, we create memories that last a lifetime. Our shared experiences bind us as a community</div>
+    <div className="OurGrandSchoolTour" style={{width: 731, height: 158, left: 78, top: 102, position: 'absolute', color: 'white', fontSize: 55, fontFamily: 'Irish Grover', fontWeight: '400', wordWrap: 'break-word'}}>Our Grand School Tour</div>
+  </div>
+  <div className="WhyToChooseUs" style={{width: 1920, height: 717.81, left: 0, top: 1389.08, position: 'absolute'}}>
+    <div className="Base" style={{width: 1920, height: 650, left: 0, top: 40.92, position: 'absolute', background: '#FFD8AD'}} />
+    <div className="Yellow" style={{width: 725, height: 500, left: 38.53, top: 247.96, position: 'absolute', transform: 'rotate(-20deg)', transformOrigin: '0 0', background: '#FFC806', borderRadius: 9999}} />
+    <div className="Red" style={{width: 725, height: 498, left: 64.27, top: 175.65, position: 'absolute', transform: 'rotate(-10deg)', transformOrigin: '0 0', background: '#FF0000', borderRadius: 9999}} />
+    <div className="JustLikeNoTwoFlowersInTheGardenAreTheSameNoTwoChildrenCanBeTheSameEachChildIsABlossomingBudWithItsOwnSpecialFragranceItIsOurResponsibilityAsFacilitatorsAndParentsToProvideThemTheEnvironmentTheyNeedToAchieveTheirFullestPotential" style={{width: 790, height: 323, left: 960, top: 248.92, position: 'absolute', color: 'black', fontSize: 48, fontFamily: 'Jolly Lodger', fontWeight: '400', wordWrap: 'break-word'}}>Just like no two flowers in the garden are the same, no two children can be the same. Each child is a blossoming bud with its own special fragrance. It is our responsibility as facilitators and parents, to provide them the environment they need to achieve their fullest potential.</div>
+    <div className="WhyToChooseTalentedTots" style={{width: 790, height: 158, left: 960, top: 99.92, position: 'absolute', color: '#410000', fontSize: 55, fontFamily: 'Irish Grover', fontWeight: '400', wordWrap: 'break-word'}}>Why to choose Talented Tots?</div>
+  </div>
+  <div className="OurCoreValues" style={{width: 1920, height: 926, left: 0, top: 504, position: 'absolute'}}>
+    <div className="Base" style={{width: 1920, height: 725, left: 0, top: 201, position: 'absolute', background: 'white'}} />
+    <div className="Value4" style={{width: 400, height: 581, left: 1460, top: 295, position: 'absolute'}}>
+      <div className="Base" style={{width: 400, height: 491, left: 0, top: 90, position: 'absolute', background: '#FF9A03', borderRadius: 50}} />
+      <div className="Pic" style={{width: 180, height: 180, left: 110, top: 0, position: 'absolute', background: '#D9D9D9', borderRadius: 9999}} />
+      <div className="InTheLuminousRealmOfZephyriaWhereCrystalRiversWhisperedSecretsToAncientWillowTrees" style={{width: 315, height: 231, left: 42, top: 280, position: 'absolute', textAlign: 'center', color: 'white', fontSize: 32, fontFamily: 'JejuGothic', fontWeight: '400', wordWrap: 'break-word'}}>In the luminous realm of Zephyria, where crystal rivers whispered secrets to ancient willow trees.</div>
+      <div className="Heading" style={{width: 200, height: 69, left: 100, top: 188, position: 'absolute', color: 'white', fontSize: 48, fontFamily: 'JejuHallasan', fontWeight: '400', wordWrap: 'break-word'}}>Heading</div>
+    </div>
+    <div className="Value3" style={{width: 400, height: 581, left: 993, top: 295, position: 'absolute'}}>
+      <div className="Baee" style={{width: 400, height: 491, left: 0, top: 90, position: 'absolute', background: '#2A4CFF', borderRadius: 50}} />
+      <div className="Pic" style={{width: 180, height: 180, left: 110, top: 0, position: 'absolute', background: '#D9D9D9', borderRadius: 9999}} />
+      <div className="InTheLuminousRealmOfZephyriaWhereCrystalRiversWhisperedSecretsToAncientWillowTrees" style={{width: 315, height: 231, left: 42, top: 280, position: 'absolute', textAlign: 'center', color: 'white', fontSize: 32, fontFamily: 'JejuGothic', fontWeight: '400', wordWrap: 'break-word'}}>In the luminous realm of Zephyria, where crystal rivers whispered secrets to ancient willow trees.</div>
+      <div className="Heading" style={{width: 200, height: 69, left: 100, top: 188, position: 'absolute', color: 'white', fontSize: 48, fontFamily: 'JejuHallasan', fontWeight: '400', wordWrap: 'break-word'}}>Heading</div>
+    </div>
+    <div className="Value2" style={{width: 400, height: 581, left: 527, top: 295, position: 'absolute'}}>
+      <div className="Base" style={{width: 400, height: 491, left: 0, top: 90, position: 'absolute', background: '#FF1F8B', borderRadius: 50}} />
+      <div className="Pic" style={{width: 180, height: 180, left: 110, top: 0, position: 'absolute', background: '#D9D9D9', borderRadius: 9999}} />
+      <div className="InTheLuminousRealmOfZephyriaWhereCrystalRiversWhisperedSecretsToAncientWillowTrees" style={{width: 315, height: 231, left: 42, top: 280, position: 'absolute', textAlign: 'center', color: 'white', fontSize: 32, fontFamily: 'JejuGothic', fontWeight: '400', wordWrap: 'break-word'}}>In the luminous realm of Zephyria, where crystal rivers whispered secrets to ancient willow trees.</div>
+      <div className="Heading" style={{width: 200, height: 69, left: 100, top: 188, position: 'absolute', color: 'white', fontSize: 48, fontFamily: 'JejuHallasan', fontWeight: '400', wordWrap: 'break-word'}}>Heading</div>
+    </div>
+    <div className="Value1" style={{width: 400, height: 581, left: 60, top: 295, position: 'absolute'}}>
+      <div className="Base" style={{width: 400, height: 491, left: 0, top: 90, position: 'absolute', background: '#5ACC00', borderRadius: 50}} />
+      <div className="Pic" style={{width: 180, height: 180, left: 110, top: 0, position: 'absolute', background: '#D9D9D9', borderRadius: 9999}} />
+      <div className="InTheLuminousRealmOfZephyriaWhereCrystalRiversWhisperedSecretsToAncientWillowTrees" style={{width: 315, height: 231, left: 42, top: 280, position: 'absolute', textAlign: 'center', color: 'white', fontSize: 32, fontFamily: 'JejuGothic', fontWeight: '400', wordWrap: 'break-word'}}>In the luminous realm of Zephyria, where crystal rivers whispered secrets to ancient willow trees.</div>
+      <div className="Heading" style={{width: 200, height: 69, left: 100, top: 188, position: 'absolute', color: 'white', fontSize: 48, fontFamily: 'JejuHallasan', fontWeight: '400', wordWrap: 'break-word'}}>Heading</div>
+    </div>
+    <div className="OurCoreValues" style={{width: 407, height: 70, left: 756, top: 0, position: 'absolute', color: '#FF0000', fontSize: 55, fontFamily: 'Irish Grover', fontWeight: '400', wordWrap: 'break-word'}}>Our Core Values</div>
+  </div>
+  <div className="PromotionalText" style={{width: 1920, height: 103, left: 0, top: 606, position: 'absolute'}}>
+    <div className="Base" style={{width: 1920, height: 103, left: 0, top: 0, position: 'absolute', background: 'linear-gradient(90deg, #8436BB 0%, #7A31AA 59%, #672887 98%, #542066 100%)'}} />
+    <div className="AdmissionsOpenRegisterFast" style={{left: 597, top: 20, position: 'absolute', color: 'white', fontSize: 55, fontFamily: 'Itim', fontWeight: '400', wordWrap: 'break-word'}}>Admissions Open Register Fast</div>
+  </div>
+  <div className="PhotoSlider" style={{width: 3118, height: 483, left: -603, top: 123, position: 'absolute'}}>
+    <div className="Base" style={{width: 1920, height: 483, left: 603, top: 0, position: 'absolute', background: '#FFD600'}} />
+    <div className="Photos" style={{width: 3118, height: 432, left: 0, top: 28, position: 'absolute'}}>
+      <div className="Rectangle3" style={{width: 768, height: 432, left: 0, top: 0, position: 'absolute', background: '#FF0000', borderRadius: 30}} />
+      <div className="Rectangle4" style={{width: 768, height: 432, left: 785, top: 0, position: 'absolute', background: '#FF0000', borderRadius: 30}} />
+      <div className="Rectangle5" style={{width: 768, height: 432, left: 1568, top: 0, position: 'absolute', background: '#FF0000', borderRadius: 30}} />
+      <div className="Rectangle6" style={{width: 768, height: 432, left: 2350, top: 0, position: 'absolute', background: '#FF0000', borderRadius: 30}} />
+    </div>
+    <div className="Sliders" style={{width: 1851, height: 90, left: 629, top: 199, position: 'absolute'}}>
+      <div className="LeftMove" style={{width: 90, height: 90, left: 0, top: 0, position: 'absolute', border: '5px #FF0000 solid'}}></div>
+      <div className="RightMove" style={{width: 90, height: 90, left: 1761, top: 0, position: 'absolute', border: '5px #FF0000 solid'}}></div>
+    </div>
+  </div>
+  <div className="NavBar" style={{width: 1920, height: 836, left: 0, top: 0, position: 'absolute'}}>
+    <div className="ContactMe" style={{width: 100, height: 100, left: 1750, top: 736, position: 'absolute', background: '#5ACC00', boxShadow: '5px 5px 4px rgba(0, 0, 0, 0.25) inset', borderRadius: 9999}} />
+    <div className="NavBase" style={{width: 1920, height: 110, left: 0, top: 0, position: 'absolute', background: 'rgba(255, 255, 255, 0.80)'}} />
+    <div className="Menu" style={{width: 996, height: 46, left: 881, top: 30, position: 'absolute'}}>
+      <div className="AboutUs" style={{width: 168, height: 45, left: 584, top: 0, position: 'absolute', color: 'black', fontSize: 36, fontFamily: 'Inter', fontWeight: '600', wordWrap: 'break-word'}}>About Us</div>
+      <div className="ContactUs" style={{width: 203, height: 45, left: 793, top: 1, position: 'absolute', color: 'black', fontSize: 36, fontFamily: 'Inter', fontWeight: '600', wordWrap: 'break-word'}}>Contact Us</div>
+      <div className="Gallery" style={{width: 137, height: 45, left: 406, top: 0, position: 'absolute', color: 'black', fontSize: 36, fontFamily: 'Inter', fontWeight: '600', wordWrap: 'break-word'}}>Gallery</div>
+      <div className="Admissions" style={{width: 214, height: 45, left: 151, top: 0, position: 'absolute', color: 'black', fontSize: 36, fontFamily: 'Inter', fontWeight: '600', wordWrap: 'break-word'}}>Admissions</div>
+      <div className="Home" style={{width: 110, height: 45, left: 0, top: 0, position: 'absolute', color: 'black', fontSize: 36, fontFamily: 'Inter', fontWeight: '600', wordWrap: 'break-word'}}>Home</div>
+    </div>
+    <img className="TalentedTodsLogo1" style={{width: 459, height: 142, left: 16, top: 6, position: 'absolute', boxShadow: '0px 4px 4px rgba(0, 0, 0, 0.25)'}} src="https://via.placeholder.com/459x142" />
+  </div>
+</div>
