--- a/feedback.html
+++ b/feedback.html
@@ -1,1 +1,1 @@
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdqjnGYo5fQfYiOp2qDEo5wdkMCqbRALy8Xli5Voz4xkm3T4Q/viewform?embedded=true" width="640" height="915" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdqjnGYo5fQfYiOp2qDEo5wdkMCqbRALy8Xli5Voz4xkm3T4Q/viewform?embedded=true" width="100%"  frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
