--- a/feedback.html
+++ b/feedback.html
@@ -1,1 +1,14 @@
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdqjnGYo5fQfYiOp2qDEo5wdkMCqbRALy8Xli5Voz4xkm3T4Q/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Client Feedbacks</title>
+    <link rel="icon" type="image/png" href="your-icon-path.png">
+</head>
+<body>
+    <h1>Client Feedbacks</h1>
+    <p>Feel free to leave your feedback:</p>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdqjnGYo5fQfYiOp2qDEo5wdkMCqbRALy8Xli5Voz4xkm3T4Q/viewform?embedded=true" width="100%" height="auto" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</body>
+</html>
