--- a/Terms&Conditions.htm
+++ b/Terms&Conditions.htm
@@ -1713,7 +1713,7 @@ normal;mso-list:l8 level1 lfo1;tab-stops:list 91.15pt'><![if !supportLists]><spa
 style='font-size:10.0pt;mso-bidi-font-size:12.0pt;font-family:Symbol;
 mso-fareast-font-family:Symbol;mso-bidi-font-family:Symbol;color:white;
 mso-themecolor:background1;mso-font-kerning:0pt;mso-ligatures:none;mso-fareast-language:
-EN-IN;mso-bidi-language:HI'><span style='mso-list:Ignore'>·<span
+EN-IN;mso-bidi-language:HI'><span style='mso-list:Ignore'>Â·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><b><span style='font-size:12.0pt;font-family:
 "Times New Roman",serif;mso-fareast-font-family:"Times New Roman";color:white;
@@ -1737,7 +1737,7 @@ normal;mso-list:l8 level1 lfo1;tab-stops:list 91.15pt'><![if !supportLists]><spa
 style='font-size:10.0pt;mso-bidi-font-size:12.0pt;font-family:Symbol;
 mso-fareast-font-family:Symbol;mso-bidi-font-family:Symbol;color:white;
 mso-themecolor:background1;mso-font-kerning:0pt;mso-ligatures:none;mso-fareast-language:
-EN-IN;mso-bidi-language:HI'><span style='mso-list:Ignore'>·<span
+EN-IN;mso-bidi-language:HI'><span style='mso-list:Ignore'>Â·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><b><span style='font-size:12.0pt;font-family:
 "Times New Roman",serif;mso-fareast-font-family:"Times New Roman";color:white;
