--- a/Terms&Conditions.htm
+++ b/Terms&Conditions.htm
@@ -5,6 +5,10 @@ xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
+<title>Terms & Conditions</title>
+
+    <!-- Add a favicon (replace 'favicon.ico' with the path to your favicon image) -->
+<link rel="icon" type="image/x-icon" href="/KGlogo.jpg" />
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 15">
