Update and rename Privacy Policy.htm to Privacy-Policy.htm

--- a/Privacy-Policy.htm
+++ b/Privacy-Policy.htm
@@ -5,6 +5,9 @@ xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
+<title>Privacy Policy</title>
+<!-- Add a favicon (replace 'favicon.ico' with the path to your favicon image) -->
+<link rel="icon" type="image/x-icon" href="/KGlogo.jpg" />
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 15">
@@ -1160,7 +1163,7 @@ margin-bottom:8.0pt;margin-left:99.25pt;mso-add-space:auto;text-indent:-18.0pt;
 line-height:115%;mso-list:l0 level1 lfo2'><![if !supportLists]><span
 style='font-size:14.0pt;line-height:115%;font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol;color:white;mso-themecolor:background1'><span
-style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='mso-list:Ignore'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span style='font-size:14.0pt;line-height:115%;
 color:white;mso-themecolor:background1'>Name<o:p></o:p></span></p>
 
@@ -1169,7 +1172,7 @@ margin-bottom:8.0pt;margin-left:99.25pt;mso-add-space:auto;text-indent:-18.0pt;
 line-height:115%;mso-list:l0 level1 lfo2'><![if !supportLists]><span
 style='font-size:14.0pt;line-height:115%;font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol;color:white;mso-themecolor:background1'><span
-style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='mso-list:Ignore'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span style='font-size:14.0pt;line-height:115%;
 color:white;mso-themecolor:background1'>Contact information including email
 address<o:p></o:p></span></p>
@@ -1179,7 +1182,7 @@ margin-bottom:8.0pt;margin-left:99.25pt;mso-add-space:auto;text-indent:-18.0pt;
 line-height:115%;mso-list:l0 level1 lfo2'><![if !supportLists]><span
 style='font-size:14.0pt;line-height:115%;font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol;color:white;mso-themecolor:background1'><span
-style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='mso-list:Ignore'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span style='font-size:14.0pt;line-height:115%;
 color:white;mso-themecolor:background1'>Demographic information such as
 postcode, preferences and interests, if required<o:p></o:p></span></p>
@@ -1189,7 +1192,7 @@ margin-bottom:8.0pt;margin-left:99.25pt;mso-add-space:auto;text-indent:-18.0pt;
 line-height:115%;mso-list:l0 level1 lfo2'><![if !supportLists]><span
 style='font-size:14.0pt;line-height:115%;font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol;color:white;mso-themecolor:background1'><span
-style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='mso-list:Ignore'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span style='font-size:14.0pt;line-height:115%;
 color:white;mso-themecolor:background1'>Other information relevant to customer
 surveys and/or offers<o:p></o:p></span></p>
@@ -1214,7 +1217,7 @@ margin-bottom:8.0pt;margin-left:99.25pt;mso-add-space:auto;text-indent:-18.0pt;
 line-height:115%;mso-list:l1 level1 lfo4'><![if !supportLists]><span
 style='font-size:14.0pt;line-height:115%;font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol;color:white;mso-themecolor:background1'><span
-style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='mso-list:Ignore'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span style='font-size:14.0pt;line-height:115%;
 color:white;mso-themecolor:background1'>Internal record keeping.<o:p></o:p></span></p>
 
@@ -1223,7 +1226,7 @@ margin-bottom:8.0pt;margin-left:99.25pt;mso-add-space:auto;text-indent:-18.0pt;
 line-height:115%;mso-list:l1 level1 lfo4'><![if !supportLists]><span
 style='font-size:14.0pt;line-height:115%;font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol;color:white;mso-themecolor:background1'><span
-style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='mso-list:Ignore'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span style='font-size:14.0pt;line-height:115%;
 color:white;mso-themecolor:background1'>We may use the information to improve
 our products and services.<o:p></o:p></span></p>
@@ -1233,7 +1236,7 @@ margin-bottom:8.0pt;margin-left:99.25pt;mso-add-space:auto;text-indent:-18.0pt;
 line-height:115%;mso-list:l1 level1 lfo4'><![if !supportLists]><span
 style='font-size:14.0pt;line-height:115%;font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol;color:white;mso-themecolor:background1'><span
-style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='mso-list:Ignore'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span style='font-size:14.0pt;line-height:115%;
 color:white;mso-themecolor:background1'>We may periodically send promotional
 emails about new products, special offers or other information which we think
@@ -1244,7 +1247,7 @@ margin-bottom:8.0pt;margin-left:99.25pt;mso-add-space:auto;text-indent:-18.0pt;
 line-height:115%;mso-list:l1 level1 lfo4'><![if !supportLists]><span
 style='font-size:14.0pt;line-height:115%;font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol;color:white;mso-themecolor:background1'><span
-style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='mso-list:Ignore'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span style='font-size:14.0pt;line-height:115%;
 color:white;mso-themecolor:background1'>From time to time, we may also use your
 information to contact you for market research purposes. We may contact you by
@@ -1317,7 +1320,7 @@ margin-bottom:8.0pt;margin-left:99.25pt;mso-add-space:auto;text-indent:-18.0pt;
 line-height:115%;mso-list:l2 level1 lfo6'><![if !supportLists]><span
 style='font-size:14.0pt;line-height:115%;font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol;color:white;mso-themecolor:background1'><span
-style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='mso-list:Ignore'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span style='font-size:14.0pt;line-height:115%;
 color:white;mso-themecolor:background1'>whenever you are asked to fill in a
 form on the website, look for the box that you can click to indicate that you
@@ -1328,7 +1331,7 @@ margin-bottom:8.0pt;margin-left:99.25pt;mso-add-space:auto;text-indent:-18.0pt;
 line-height:115%;mso-list:l2 level1 lfo6'><![if !supportLists]><span
 style='font-size:14.0pt;line-height:115%;font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol;color:white;mso-themecolor:background1'><span
-style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+style='mso-list:Ignore'>Â·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><![endif]><span style='font-size:14.0pt;line-height:115%;
 color:white;mso-themecolor:background1'>if you have previously agreed to us
 using your personal information for direct marketing purposes, you may change
