Update and rename Shipping&Delivery Policy.htm to Shipping&DeliveryPolicy.htm

--- a/Shipping&DeliveryPolicy.htm
+++ b/Shipping&DeliveryPolicy.htm
@@ -5,6 +5,8 @@ xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
+<title>Shipping & Delivery Policy</title>
+<link rel="icon" type="image/x-icon" href="/KGlogo.jpg" />
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 15">
@@ -782,7 +784,7 @@ color:white;mso-themecolor:background1'>Shipping &amp; Delivery Policy<o:p></o:p
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:2.0cm;margin-bottom:8.0pt;
 margin-left:2.0cm'><span style='font-size:14.0pt;line-height:107%;color:white;
-mso-themecolor:background1'><span style='mso-spacerun:yes'> </span>Last updated
+mso-themecolor:background1'><span style='mso-spacerun:yes'>Â </span>Last updated
 on May 16<sup>th</sup>, 2024<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
