--- a/portfolio/test.html
+++ b/portfolio/test.html
@@ -309,6 +309,7 @@
                     </svg>
             </div>
         </div>
+        <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_O46DOje1arH1Ii" async> </script> </form>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
