--- a/portfolio/test.html
+++ b/portfolio/test.html
@@ -278,6 +278,7 @@
                         <textarea id="message" name="message"></textarea>
                 
                         <input type="button" value="Submit" onclick="submitForm()">
+                        <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_O46DOje1arH1Ii" async> </script> </form>
                     </form>
                 </div>
             </div>
