--- a/pay.html
+++ b/pay.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="container">
-    <h1>Contribution for Dhol for Scribble Day at School</h1>
+    <h1>Pay Now</h1>
     <form id="contributionForm">
         <label for="name">Your Name:</label><br>
         <input type="text" id="name" name="name" placeholder="Enter your name" required><br>
